--- a/UberBean/Info.plist
+++ b/UberBean/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string>Allow me to access your location so that I can spy on you.</string>
 </dict>
 </plist>
